<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:text="@string/select_startmode"
        android:textColor="#ff000000"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btn_sms"
        android:layout_width="245dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_check_up"
        android:onClick="onSelectSms"
        android:text="@string/smsmode"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btn_phone"
        android:layout_width="245dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_check_down"
        android:onClick="onSelectPhone"
        android:text="@string/phonemode"
        android:textSize="18dp" />
      
       <ImageView
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:contentDescription="@string/start_runtime"
           android:paddingBottom="15dp"
           android:paddingTop="15dp"
           android:scaleType="fitXY"
           android:src="@drawable/separator" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >

           <ImageView
               android:id="@+id/imageView1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingRight="5dp"
               android:paddingTop="3dp"
               android:src="@drawable/small_info" />

           <TextView
               android:id="@+id/textView1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/startmodeinfo" />

       </LinearLayout>

</LinearLayout>