<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
 >
    <include 
        layout="@layout/logo_info" />
    <LinearLayout 
        android:gravity="center" 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_margin="5.0dip">

        <TextView
            android:id="@+id/start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/start_mode_sms"
            android:textColor="#ff000000"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_car1"
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_segment_left"
                android:onClick="onCar1Click"
                android:padding="0.0dip"
                android:text="@string/start_car1"
                android:textSize="24dp" />

           <Button
               android:id="@+id/btn_car2"
               android:layout_width="80dp"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:background="@drawable/btn_segment_right"
               android:onClick="onCar2Click"
               android:padding="0.0dip"
               android:text="@string/start_car2"
               android:textSize="24dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:padding="5.0dip"
            android:contentDescription="@string/start_runtime"
            android:src="@drawable/separator" />

        <TextView
            android:id="@+id/sms_info_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:paddingBottom="10.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/start_runtime"
            android:textColor="#ff000000"
            android:textSize="14.0dip" />

        <TextView
            android:id="@+id/phone_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16.0dip"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/sms_runtime"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:visibility="visible" >
            
            <Button
                android:id="@+id/btn_time1"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_segment_left"
                android:onClick="onTime1Click"
                android:padding="0.0dip"
                android:text="@string/start_time1"
                android:textSize="24dp" />
            
            <Button
                android:id="@+id/btn_time2"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_segment_middle"
                android:onClick="onTime2Click"
                android:padding="0.0dip"
                android:text="@string/start_time2"
                android:textSize="24dp" />
            
            <Button
                android:id="@+id/btn_time3"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_segment_middle"
                android:onClick="onTime3Click"
                android:padding="0.0dip"
                android:text="@string/start_time3"
                android:textSize="24dp" />

             <Button
                 android:id="@+id/btn_time4"
                 android:layout_width="0dip"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:background="@drawable/btn_segment_middle"
                 android:onClick="onTime4Click"
                 android:padding="0.0dip"
                 android:text="@string/start_time4"
                 android:textSize="24dp" />

             <Button
                 android:id="@+id/btn_time5"
                 android:layout_width="0dip"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:background="@drawable/btn_segment_right"
                 android:onClick="onTime5Click"
                 android:padding="0.0dip"
                 android:text="@string/start_time5"
                 android:textSize="24dp" />
            
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:paddingTop="10.0dip"
            android:contentDescription="@string/start_runtime"
            android:src="@drawable/separator" />

        <Button
            android:id="@+id/start_engine"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_engine_selector"
            android:onClick="onStartClick"
            android:padding="7.0dip"
            android:text="@string/start_engine"
            android:textSize="24dp" />

        <Button
            android:id="@+id/start_stop"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_stop_selector"
            android:onClick="onStopClick"
            android:padding="7.0dip"
            android:text="@string/start_stop"
            android:textSize="24dp" />

    </LinearLayout>
</LinearLayout>