<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
 >
    <include 
        layout="@layout/logo_info" />
    <LinearLayout 
        android:gravity="center" 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_margin="40.0dip">

        <Button
            android:id="@+id/btn_query_setting_car1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/barbtn_up"
            android:padding="0.0dip"
            android:text="@string/query_setting1"
            android:textSize="16.0dip"
            android:onClick="onQuerySetting_car1" />

        
         <Button
            android:id="@+id/btn_query_bound_car1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/barbtn_middle"
          
            android:padding="0.0dip"
            android:text="@string/query_bound1"
            android:textSize="16.0dip"
            android:onClick="onQueryBound_car1" />
         
          <Button
            android:id="@+id/btn_query_setting_car2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/barbtn_middle"
          
            android:padding="0.0dip"
            android:text="@string/query_setting2"
            android:textSize="16.0dip"
            android:onClick="onQuerySetting_car2" />

        <Button
            android:id="@+id/btn_query_bound_car2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/barbtn_down"
          
            android:padding="0.0dip"
            android:text="@string/query_bound2"
            android:textSize="16.0dip"
            android:onClick="onQueryBound_car2" />

    </LinearLayout>
</LinearLayout>