<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setpwd_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/setpassword_label"
        android:textColor="#ff000000"
        android:textSize="16dp" />

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tb_blank_left"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/old_pwd"
                android:textColor="#ff333333"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editoldpwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tb_blank_right"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="15dp" />

        </LinearLayout>
      
      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tb_blank_left"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/new_pwd"
                android:textColor="#ff333333"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editnewpwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tb_blank_right"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="15dp" />

        </LinearLayout>

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tb_blank_left"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/confirm_pwd"
                android:textColor="#ff333333"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editconfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tb_blank_right"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="15dp" />

        </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/setpassword_info"
           android:textColor="#ff000000"
           android:textSize="16dp" />
       
            <Button
         android:id="@+id/btn_setpwd_car"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/btn_send"
 
         android:padding="10dp"
         android:text="@string/setpassword_sender" />
    
    
</LinearLayout>